add routes and api transaction
